fixes align issue with css

--- a/week4/day4/tipCalc.css
+++ b/week4/day4/tipCalc.css
@@ -2,7 +2,6 @@ body {
   background-color: silver;
   display: flex;
   justify-content: center;
-  align-content: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 30px;
@@ -13,12 +12,13 @@ body {
 }
 
 #main-container {
-  height: 75vh;
-  width: 50vh;
+  height: 100vh;
+  width: 75vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  place-items: center;
+  /* or */
+  /* align-items: center; */
   background-color: white;
 }
 
